[package]
name = "rust-pass"
version = "0.1.0"
authors = ["yozhgoor <yozhgoor@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "5.0.1"
sha1 = { version = "0.6.0", features = ["std"] }
base64 = "~0.13.0"
